--- a/package.json
+++ b/package.json
@@ -3,20 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
+    "@chakra-ui/react": "^1.0.0",
+    "@chakra-ui/theme": "^1.14.1",
+    "@chakra-ui/theme-tools": "^1.3.6",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "~11.0.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "express": "^4.17.3",
+    "framer-motion": "^4.1.7",
     "mongoose": "^6.3.0",
     "nodemon": "^2.0.15",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
+    "react-paginate": "^8.1.3",
     "react-scripts": "5.0.1",
     "unsplash-js": "^7.0.15",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "server" : "nodemon backend/server.js",
+    "server": "nodemon backend/server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
